# sigmond

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  config_reader.py  configure.py  install_dependencies.sh  pyproject.toml  setup.py  sigmond.toml
cmake/: VerifyPackage.cmake
examples/D200_Lambda_1405/: PSQ0_G1u_fit_input.xml  PSQ0_G1u_rotation_input.xml  README.md
source/observables/: basic_laph_operator_info.cc
src/sigmond/cpp/: CMakeLists.txt
src/sigmond/cpp/apps/: sigmond.cc
src/sigmond/cpp/data_handling/: byte_handler.cc
src/sigmond/cpp/fitting/: CMakeLists.txt  chisq_base.h  chisq_fit.cc  minimizer.cc  model_tcorr.cc  prior.h
src/sigmond/cpp/observables/: CMakeLists.txt  gen_irrep_operator_info.cc
src/sigmond/cpp/plotting/: CMakeLists.txt
src/sigmond/cpp/tasks/: CMakeLists.txt  rolling_pivot.cc  scalar_defs.cc  scalar_defs.h  task_utils.h
src/sigmond/source/: CMakeLists.txt
src/sigmond/source/analysis/: CMakeLists.txt
src/sigmond/source/data_handling/: CMakeLists.txt  io_handler_hdf5.cc
src/sigmond/source/fitting/: chisq_base.cc  chisq_fit.cc  chisq_tcorr.h  model_tcorr.cc  model_tcorr.h  prior.cc
src/sigmond/source/observables/: correlator_matrix_info.h  gen_irrep_operator_info.cc
src/sigmond/source/pysigmond/: CMakeLists.txt  pysigmond.cc
src/sigmond/source/tasks/: CMakeLists.txt  pivoter.h  rolling_pivot.cc  rolling_pivot.h  single_pivot.cc  task_utils.cc
